// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Callout CalloutApprofondimento 1`] = `
<div>
  <div
    class="note callout callout-more"
  >
    <div
      class="callout-title"
    >
      <svg
        aria-hidden="true"
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M10.4 9.5h3.3v1h-3.3v3.2h-1v-3.2H6.2v-1h3.2V6.2h1v3.3zm10.7 12.4L15.3 16c-1.5 1.3-3.4 2-5.3 2-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8c0 1.9-.7 3.8-2 5.3l5.9 5.8-.8.8zM17 10c0-3.9-3.1-7-7-7s-7 3.1-7 7 3.1 7 7 7 7-3.1 7-7z"
        />
      </svg>
      <span>
        Approfondimento
      </span>
    </div>
    <p
      class=""
    >
      Quisque suscipit interdum augue non volutpat. Cras tristique arcu tortor. Mauris eu magna nibh. Curabitur malesuada neque in lectus sagittis accumsan. In vitae justo eros. Maecenas pellentesque lacinia ipsum vitae rhoncus. Vestibulum pretium tempor turpis, nec gravida eros viverra in. Proin dictum nibh ut semper tristique.
    </p>
    <p
      class=""
    >
      Maecenas at erat id 
      <strong>
        sem interdum efficitur eu sed nunc.
      </strong>
       Mauris sit amet erat eget augue molestie malesuada ut sed ex. In sed dignissim elit. Donec efficitur, sem eget vestibulum auctor, sem erat interdum magna, eu commodo odio mauris semper dolor.
    </p>
    <p
      class=""
    >
      Maecenas vulputate ante dictum 
      <a
        href="#"
      >
        vestibulum volutpat
      </a>
      . Lorem ipsum dolor sit amet,
       
      <strong>
        consectetur adipiscing elit.
      </strong>
       Aenean non augue non purus vestibulum varius. Maecenas ullamcorper tincidunt nulla quis laoreet.
    </p>
    <div
      class="collapse-div"
    >
      <div
        class="collapse-header"
        id="example-heading"
      >
        <button
          aria-controls="example-collapse"
          aria-expanded="false"
          class="callout-more-toggle btn btn-primary"
          style="font-family: var(--bs-font-sans-serif); font-size: 1rem;"
          type="button"
        >
          Leggi tutto 
          <span />
        </button>
        <a
          class="callout-more-download"
          href="#"
          style="font-family: var(--bs-font-sans-serif); font-size: 1rem;"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M12 14.2 7.7 9.9l.7-.7 3.1 3.1V3h1v9.2l3.1-3 .7.7-4.3 4.3zm7-2.2v7.5c0 .3-.2.5-.5.5h-13c-.3 0-.5-.2-.5-.5V12H4v7.5c0 .8.7 1.5 1.5 1.5h13c.8 0 1.5-.7 1.5-1.5V12h-1z"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            PDF
          </span>
          Download
        </a>
      </div>
      <div
        aria-labelledby="example-heading"
        class="collapse "
        id="example-collapse"
        role="tabpanel"
      >
        <div
          class="collapse-body"
        >
          <p>
            Aenean tortor enim, suscipit eget commodo at, imperdiet quis diam. Vestibulum non accumsan felis, at ultrices lorem. Pellentesque ac diam a ipsum cursus interdum id nec odio. Vestibulum nec congue mauris. Aliquam et dui purus. Mauris in imperdiet risus, sed blandit tellus. Donec posuere accumsan lacinia. Mauris dignissim, sem vel volutpat rhoncus, neque mi ullamcorper ante, vitae volutpat ipsum quam id purus. Duis tincidunt sodales nisl eget ultricies. Sed condimentum mi eu ex venenatis, quis bibendum dui ultrices. Quisque ex eros, pellentesque vitae enim sed, pharetra tempus dolor. Donec eu nibh ac lacus luctus pellentesque. Duis interdum scelerisque magna nec malesuada.
          </p>
          <p>
            Maecenas at erat id 
            <strong>
              sem interdum efficitur eu sed nunc.
            </strong>
             Mauris sit amet erat eget augue molestie malesuada ut sed ex. In sed dignissim elit. Donec efficitur, sem eget vestibulum auctor, sem erat interdum magna, eu commodo odio mauris semper dolor.
          </p>
          <p>
            Maecenas vulputate ante dictum 
            <a
              href="#"
            >
              vestibulum volutpat
            </a>
            . Lorem ipsum dolor sit amet,
             
            <strong>
              consectetur adipiscing elit.
            </strong>
             Aenean non augue non purus vestibulum varius. Maecenas ullamcorper tincidunt nulla quis laoreet.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Callout CalloutHighlights 1`] = `
<div>
  <div
    class="success callout callout-highlight"
  >
    <div
      class="callout-title"
    >
      <svg
        aria-hidden="true"
        class="icon"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
        />
      </svg>
      Titolo
    </div>
    <p
      class=""
    >
      Maecenas at erat id sem interdum efficitur eu sed nunc. Mauris sit amet erat eget augue molestie malesuada ut sed ex. In sed dignissim elit.
    </p>
    <p
      class=""
    >
      Maecenas vulputate ante dictum vestibulum volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non augue non purus vestibulum varius. Maecenas ullamcorper 
      <a
        href="#"
      >
        tincidunt nulla quis laoreet.
      </a>
    </p>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Callout CalloutVariantiColore 1`] = `
<div>
  <div
    class="success callout"
  >
    <div
      class="callout-inner"
    >
      <div
        class="callout-title"
      >
        <svg
          aria-hidden="true"
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
          />
        </svg>
        <span
          class="text"
        >
          Usa
        </span>
      </div>
      <p
        class=""
      >
        Maecenas vulputate ante dictum vestibulum volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non augue non purus vestibulum varius.
      </p>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Callout EsempioAccessibilita 1`] = `
<div>
  <div
    class="callout"
  >
    <div
      class="callout-inner"
    >
      <div
        class="callout-title"
      >
        <svg
          aria-hidden="true"
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          Confermato
        </span>
        <span
          class="text"
        >
          Titolo Callout
        </span>
      </div>
      <p
        class=""
      >
        Maecenas vulputate ante dictum vestibulum volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non augue non purus vestibulum varius.
      </p>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Callout EsempioBasico 1`] = `
<div>
  <div
    class="callout"
  >
    <div
      class="callout-inner"
    >
      <div
        class="callout-title"
      >
        <span
          class="text"
        >
          Titolo Callout
        </span>
      </div>
      <p
        class=""
      >
        Maecenas vulputate ante dictum vestibulum volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non augue non purus vestibulum varius.
      </p>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Callout EsempioConIcona 1`] = `
<div>
  <div
    class="callout"
  >
    <div
      class="callout-inner"
    >
      <div
        class="callout-title"
      >
        <svg
          aria-hidden="true"
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          Confermato
        </span>
        <span
          class="text"
        >
          Titolo Callout
        </span>
      </div>
      <p
        class=""
      >
        Maecenas vulputate ante dictum vestibulum volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non augue non purus vestibulum varius.
      </p>
    </div>
  </div>
</div>
`;
